--- a/3DTubeBender/3DTubeBender.csproj
+++ b/3DTubeBender/3DTubeBender.csproj
@@ -11,6 +11,21 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -155,6 +170,49 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Bender.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Emergency Stop - Clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Emergency Stop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\New Background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Toolbar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Close - Highlighted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Close - Unhighlighted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Settings - Clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Settings - Unhighlighted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Info.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Info - Clicked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Info - Highlighted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Settings - Highlighted.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
